--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.4.0",
+    "three": "^0.172.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -37,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vite": "^5.4.11"
   }
 }
