--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,6 +3,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"],
+      "@media/*": ["./src/assets/*"],
+      "@shared/*": ["./src/app/shared/*"]
+    },
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
