--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@media/*": ["./src/assets/*"],
+      "@shared/*": ["./src/app/shared/*"]
+    },
     "types": []
   },
   "files": [
