feat: home page, alias, tabletop e chat integrado com websocket

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
-      "@media/*": ["./src/assets/*"],
+      "@assets/*": ["./src/assets/*"],
       "@shared/*": ["./src/app/shared/*"]
     },
     "outDir": "./out-tsc/spec",
