--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-primeui": "^0.4.0",
     "three": "^0.172.0",
     "tslib": "^2.3.0",
